--- a/views/index.pug
+++ b/views/index.pug
@@ -3,5 +3,14 @@ extends layout
 block content
   h1= title
   p Welcome to Web Apps #{title}
-  button(type="button" class="btn btn-secondary" ) Press Me
-
+  button(type="button" class="btn btn-secondary" onclick="goFaster()") Press Me
+  br
+  div#faster Increase the speed 
+  script.
+    let mph = 20;
+    let change = 1;
+    function goFaster() {
+      mph += change;
+      change += 1;
+      document.getElementById('faster').textContent = `MPH ${mph} with change ${change}`;
+    }
