added three objects

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,3 +14,4 @@ block content
       change += 1;
       document.getElementById('faster').textContent = `MPH ${mph} with change ${change}`;
     }
+    a(href='http://localhost:3000/watch') Click Here to Visit Watch Website
