--- a/views/Watch.pug
+++ b/views/Watch.pug
@@ -7,4 +7,8 @@ block content
   div(class="row")
    each f,index  in Watch
     div(class="col-sm-2" onclick =`buy(${index})`) #{f.watchModel}, #{f.watchYear}, #{f.watchPrice}
-  
+    script.
+        function buy(a)
+        {
+            alert(`You purchased Item ${a+1}`)
+        } 
